--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="app/scss/style.css">
+
+  <!-- GOOGLE FONT -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
@@ -16,17 +23,32 @@
 </head>
 <body>
 
-  Build The Community Your Fans Will Love
+  <header class="header">
+    <img class="header__logo" src="images/logo.svg" alt="huddle"/>
+  </header>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  <main class="hero">
+    <section class="hero__image">
+      <img src="images/illustration-mockups.svg" alt="illustration-mockups">
+    </section>
+    <section class="hero__text">
+      
+      <h1>Build The Community Your Fans Will Love</h1>
 
-  Register
+      <p>
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+        Create connections with your users as you engage in genuine discussion.
+      </p>
+
+      <button class="button">Register</button>
+      
+    </section>
+  </main>
 
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">MOISE Rajesearison</a>.
     </p>
   </footer>
 </body>
